--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset='UTF-8')
-    title PPC Report
+    title Christmas Hat Challenge
   body
     #app
     script(src='assets/data.js')
