--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -29,10 +29,12 @@ $green: rgb(0, 153, 51);
 $light-red: rgb(255, 51, 51);
 $red: rgb(204, 0, 0);
 
+$light-blue: rgb(51, 173, 255);
+$blue: rgb(0, 102, 204);
+
 html, body, #app, .content{
   @include full-screen();
   font-family: 'Roboto', sans-serif;
-  overflow: hidden;
 }
 
 .grid{
@@ -40,18 +42,15 @@ html, body, #app, .content{
 }
 
 .header{
-  align-items: center;
-  display: flex;
   height: 100%;
-  justify-content: center;
   width: 100%;
 }
 
 #snow{
   @include full-screen();
   background: linear-gradient(to bottom, rgb(23,82,145), rgb(105,173,212));
-  overflow: hidden;
-  position: absolute;
+  position: fixed;
+  top: 0px;
   z-index: 1;
 }
 
@@ -59,10 +58,12 @@ html, body, #app, .content{
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 220px;
+  justify-content: center;
+  margin-bottom: 20px;
+  padding: 10px 0px;
+  position: relative;
   width: 100%;
-  padding: 10px;
-  position: fixed;
-  top: 0px;
   z-index: 3;
 
   hr{
@@ -174,7 +175,7 @@ html, body, #app, .content{
   border-top-left-radius: 100% 50%;
   border-top-right-radius: 100% 50%;
   bottom: 0px;
-  height: 100px;
+  height: 0px;
   position: absolute;
   width: 120%;
   z-index: 2;
@@ -183,18 +184,95 @@ html, body, #app, .content{
 .contestants{
   background-color: rgba(255,255,255,0.4);
   bottom: 0px;
-  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   left: 0px;
-  position: absolute;
-  width: 300px;
+  margin-top: 20px;
+  padding: 0px;
+  padding-bottom: 20px;
+  position: relative;
+  width: 100%;
   z-index: 3;
+
+  .contestant{
+    align-items: center;
+    display: flex;
+    height: 50%;
+    justify-content: center;
+    margin: 20px 20px 0px 0px;
+    width: 260px;
+
+    h1{
+      font-size: 18px;
+      margin: 0px;
+    }
+
+    .bar{
+      align-items: center;
+      background: repeating-linear-gradient(
+        -45deg,
+        $light-blue,
+        $light-blue 30px,
+        $blue 30px,
+        $blue 60px
+      );
+      border-radius: 25px;
+      box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+      display: flex;
+      height: 30px;
+      margin-left: -50px;
+      padding: 10px;
+      position: relative;
+      width: 240px;
+
+      .name{
+        margin-left: 50px;
+
+        h1{
+          color: white;
+        }
+      }
+
+      .votes{
+        align-items: center;
+        border-left: 1px solid white;
+        display: flex;
+        height: 20px;
+        padding: 5px 10px;
+        right: 0px;
+        width: 30px;
+
+        h1{
+          color: white;
+        }
+      }
+    }
+
+    .place{
+      align-items: center;
+      background-color: white;
+      border-radius: 25px;
+      display: flex;
+      height: 30px;
+      justify-content: center;
+      padding: 10px;
+      width: 30px;
+      z-index: 2;
+    }
+  }
+
+  .votes{
+    margin-left: 10px;
+  }
 }
 
 .leaders{
+  align-items: center;
   display: flex;
   justify-content: center;
-  position: relative;
-  width: 600px;
+  top: 240px;
+  width: 100%;
   z-index: 3;
 
   .names{
