--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,6 +14,8 @@
 $light-gold: rgb(255, 217, 102);
 $medium-gold: rgb(255, 191, 0);
 $dark-gold: rgb(204, 153, 0);
+$light-gold-t: rgba(255, 217, 102, 0.5);
+$medium-gold-t: rgba(255, 191, 0, 0.5);
 
 $light-silver: rgb(230, 230, 230);
 $medium-silver: rgb(166, 166, 166);
@@ -25,16 +27,23 @@ $dark-bronze: rgb(164, 102, 40);
 
 $light-green: rgb(71, 209, 71);
 $green: rgb(0, 153, 51);
+$light-green-t: rgba(71, 209, 71, 0.5);
+$green-t: rgba(0, 153, 51, 0.5);
 
 $light-red: rgb(255, 51, 51);
 $red: rgb(204, 0, 0);
+$light-red-t: rgba(255, 51, 51, 0.5);
+$red-t: rgba(204, 0, 0, 0.5);
 
 $light-blue: rgb(51, 173, 255);
 $blue: rgb(0, 102, 204);
+$dark-blue: rgb(0, 51, 153);
+$dark-blue-t: rgba(0, 51, 153, 0.5);
 
 html, body, #app, .content{
   @include full-screen();
   font-family: 'Roboto', sans-serif;
+  overflow: hidden;
 }
 
 .grid{
@@ -56,19 +65,36 @@ html, body, #app, .content{
 
 .footer{
   align-items: center;
-  background-color: rgba(0,0,0,0.4);
-  color: white;
+  background-color: white;
+  border-top-left-radius: 100% 50%;
+  border-top-right-radius: 100% 50%;
+  bottom: 0px;
+  color: black;
   display: flex;
-  margin-top: 10px;
-  position: relative;
+  left: -10%;
+  margin-top: 40px;
+  padding: 10px 0px;
+  position: fixed;
   text-align: center;
-  width: 100%;
-  z-index: 2;
+  width: 120%;
+  z-index: 5;
 
   .text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 10px 20px;
+    width: 100%;
+
+    hr{
+      background-color: $blue;
+      border: none;
+      height: 1px;
+      width: 70%;
+    }
 
     p{
+      margin: 5px 10%;
       padding: 10px;
     }
   }
@@ -78,31 +104,75 @@ html, body, #app, .content{
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 220px;
   justify-content: center;
-  margin-bottom: 20px;
-  padding: 10px 0px;
   position: relative;
   width: 100%;
   z-index: 3;
 
-  hr{
-    width: 500px;
-  }
-
-  .year, .text{
-    color: white;
-    font-size: 96px;
+  .text{
+    background-color: white;
+    border-bottom-left-radius: 78px;
+    border-bottom-right-radius: 78px;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.4);
+    color: black;
+    font-size: 48px;
     font-weight: 100;
     margin: 0px;
+    padding: 10px;
     text-align: center;
+    width: 1000px;
+  }
+}
+
+.last-years-winner-wrapper{
+  @include full-screen();
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 0px;
+  z-index: 2;
+}
+
+.last-years-winner{
+  align-items: center;
+  border-radius: 60px;
+  box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 300px;
+  position: relative;
+  width: 300px;
+
+  h1{
+    align-items: center;
+    background-color: white;
+    display: flex;
+    font-size: 24px;
+    height: 20px;
+    justify-content: center;
+    margin: 0px;
+    padding: 20px 0px;
     width: 100%;
   }
-  .year{
-    font-size: 96px;
+
+  .image{
+    align-items: center;
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    width: 100%;
   }
-  .text{
-    font-size: 48px;
+
+  .title{
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
+  }
+
+  .name{
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
   }
 }
 
@@ -113,9 +183,14 @@ html, body, #app, .content{
   justify-content: center;
   margin-top: 20px;
   position: absolute;
-  right: 0px;
+  right: -300px;
   top: 0px;
+  transition: all 1s;
   z-index: 3;
+
+  &.intro{
+    right: 0px;
+  }
 
   .money, .votes{
     align-items: center;
@@ -201,25 +276,39 @@ html, body, #app, .content{
   z-index: 2;
 }
 
+.contestants-wrapper{
+  align-items: center;
+  display: flex;
+  height: 500px;
+  position: absolute;
+  top: 240px;
+  width: 100%;
+}
+
 .contestants{
-  bottom: 0px;
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  left: 0px;
-  margin-top: 40px;
   padding: 0px;
-  padding-bottom: 20px;
-  position: relative;
-  width: 100%;
+  position: absolute;
+  right: -600px;
+  transform: rotateX(-25deg) rotateY(-35deg) rotateZ(-5deg);
+  transform-style: preserve-3d;
+  transition: all 1s;
+  width: 600px;
   z-index: 3;
+
+  &.intro{
+    right: 0px;
+  }
 
   .contestant{
     align-items: center;
     display: flex;
     height: 50%;
     justify-content: center;
-    margin: 20px 20px 0px 0px;
+    margin: 0px 20px 20px 0px;
     width: 260px;
 
     h1{
@@ -237,7 +326,7 @@ html, body, #app, .content{
         $blue 60px
       );
       border-radius: 30px;
-      box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+      box-shadow: 16px -16px 4px rgba(0,0,0,0.15);
       display: flex;
       height: 60px;
       margin-left: -60px;
@@ -309,13 +398,30 @@ html, body, #app, .content{
   }
 }
 
+.leaders-wrapper{
+  align-items: center;
+  display: flex;
+  height: 500px;
+  position: absolute;
+  top: 240px;
+  width: 100%;
+}
+
 .leaders{
   align-items: center;
   display: flex;
   justify-content: center;
-  top: 240px;
-  width: 100%;
+  left: -500px;
+  position: absolute;
+  transform: rotateX(-35deg) rotateY(35deg) rotateZ(15deg);
+  transform-style: preserve-3d;
+  transition: all 1s;
+  width: 500px;
   z-index: 3;
+
+  &.intro{
+    left: 0px;
+  }
 
   .names{
     align-items: center;
@@ -333,13 +439,12 @@ html, body, #app, .content{
 
       h1{
         align-items: center;
-        box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+        box-shadow: -16px -16px 4px rgba(0,0,0,0.15);
         color: white;
         display: flex;
-        font-weight: 100;
+        font-weight: 700;
         justify-content: center;
         margin: 0px;
-        text-shadow: 1px 1px black;
       }
 
       &.first{
@@ -415,6 +520,8 @@ html, body, #app, .content{
 
     .medal{
       align-items: center;
+      box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+      border-radius: 50%;
       margin: 0px;
       margin-bottom: 20px;
       width: 100%;
@@ -492,4 +599,101 @@ html, body, #app, .content{
       }
     }
   }
+}
+
+/* -- Christmas lights -- */
+
+$globe-width:   12px;
+$globe-height:  28px;
+$globe-spacing: 40px;
+$globe-spread: 3px;
+$light-off-opacity: 0.4;
+
+.lights {
+  top: 76px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  z-index: 1;
+  margin: -15px 0 0 0;
+  padding: 0;
+  pointer-events: none;
+  li {
+    position: relative;
+    animation-fill-mode: both;
+    animation-iteration-count:infinite;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: block;
+    width: $globe-width;
+    height: $globe-height;
+    border-radius: 50%;
+    margin: $globe-spacing/2;
+    display: inline-block;
+    background: $green;
+    box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $light-green;
+    animation-name: flash-1;
+    animation-duration: 2s;
+    &:nth-child(2n+1) {
+      background: $blue;
+      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $light-blue;
+      animation-name: flash-2;
+      animation-duration: 0.4s;
+    }
+    &:nth-child(4n+2) {
+      background: $red;
+      box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $red;
+      animation-name: flash-3;
+      animation-duration: 1.1s;
+    }
+    &:nth-child(odd) {
+      animation-duration: 1.8s;
+    }
+    &:nth-child(3n+1) {
+      animation-duration: 1.4s;
+    }
+    &:before {
+      content: "";
+      position: absolute;
+      background: #222;
+      width: ($globe-width - 2);
+      height: $globe-height/3;
+      border-radius: 3px;
+      top: (0 - ($globe-height/6));
+      left: 1px;
+    }
+    &:after {
+      content: "";
+      top: (0 - $globe-height/2);
+      left: $globe-width - 3;
+      position: absolute;
+      width: $globe-spacing + 12;
+      height: ($globe-height/3 * 2);
+      border-bottom: solid #222 2px;
+      border-radius: 50%;
+    }
+    &:last-child:after {
+      content: none;
+    }
+  }
+}
+@keyframes flash-1 {
+  0%, 100% { background: $green;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $green;}
+  50% { background: $green-t;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $green-t;}
+}
+@keyframes flash-2 {
+  0%, 100% { background: $dark-blue;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $dark-blue;}
+  50% { background: $dark-blue-t;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $dark-blue-t;}
+}
+@keyframes flash-3 {
+  0%, 100% { background: $red;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $red;}
+  50% { background: $red-t;
+  box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $red-t;}
 }
