--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -96,6 +96,7 @@ html, body, #app, .content{
 
     p{
       margin: 5px 10%;
+      font-weight: 700;
       padding: 10px;
     }
   }
@@ -113,7 +114,7 @@ html, body, #app, .content{
   .text{
     background-color: white;
     border-radius: 60px;
-    box-shadow: 0px -8px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: -2px 2px 0px 2px $light-red,2px -2px 0px 2px $light-green, -4px -8px 4px 8px rgba(0, 0, 0, 0.15);
     color: $light-red;
     font-size: 48px;
     font-weight: bolder;
@@ -133,13 +134,13 @@ html, body, #app, .content{
   justify-content: center;
   position: absolute;
   top: 0px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .last-years-winner{
   align-items: center;
   border-radius: 60px;
-  box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+  box-shadow: -4px -4px 0px 4px $light-silver, 1px 1px 4px rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -314,7 +315,7 @@ html, body, #app, .content{
     display: flex;
     height: 50%;
     justify-content: center;
-    margin: 0px 20px 26px 0px;
+    margin: 0px 20px 30px 0px;
     width: 260px;
 
     h1{
@@ -332,7 +333,7 @@ html, body, #app, .content{
         $blue 60px
       );
       border-radius: 30px;
-      box-shadow: 0px 0px 0px 8px $blue, 26px -26px 4px rgba(0,0,0,0.15);
+      box-shadow: 0px 0px 0px 8px $blue, 8px -8px 0px 8px $light-blue, 36px -26px 4px 8px rgba(0,0,0,0.15);
       display: flex;
       height: 60px;
       margin-left: -60px;
@@ -443,7 +444,7 @@ html, body, #app, .content{
 
     .name{
       display: flex;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       text-shadow: $medium-silver 1px 1px, $medium-silver 2px 2px;
       width: 100%;
       z-index: 2;
@@ -470,7 +471,7 @@ html, body, #app, .content{
             $medium-gold 100px
           );
           border-radius: 80px;
-          box-shadow: 0px 0px 0px 10px $dark-gold, -36px -26px 4px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-gold, -12px -8px 0px 12px $medium-gold, -56px -46px 4px 12px rgba(0,0,0,0.15);
           font-size: 32px;
           height: 160px;
           margin-left: -160px;
@@ -491,7 +492,7 @@ html, body, #app, .content{
             $medium-silver 80px
           );
           border-radius: 60px;
-          box-shadow: 0px 0px 0px 10px $dark-silver, -36px -26px 4px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-silver, -10px -8px 0px 10px $medium-silver, -46px -36px 4px 10px rgba(0,0,0,0.15);
           font-size: 24px;
           height: 120px;
           margin-left: -120px;
@@ -512,7 +513,7 @@ html, body, #app, .content{
             $medium-bronze 60px
           );
           border-radius: 40px;
-          box-shadow: 0px 0px 0px 10px $dark-bronze, -36px -26px 4px rgba(0,0,0,0.15);
+          box-shadow: 0px 0px 0px 10px $dark-bronze, -10px -8px 0px 10px $medium-bronze, -46px -36px 4px 10px rgba(0,0,0,0.15);
           font-size: 18px;
           height: 80px;
           margin-left: -80px;
@@ -543,7 +544,7 @@ html, body, #app, .content{
       box-shadow: 1px 1px 4px rgba(0,0,0,0.4);
       border-radius: 50%;
       margin: 0px;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       width: 100%;
 
       .place{
