Updated readme. Style fixes.

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -296,15 +296,17 @@ html, body, #app, .content{
   align-items: center;
   display: flex;
   flex-wrap: wrap;
+  max-height: 540px;
   justify-content: center;
-  padding: 0px;
+  overflow: auto;
+  padding: 30px 0px;
   position: absolute;
   right: -600px;
   transform: rotateX(-25deg) rotateY(-35deg) rotateZ(-5deg);
   transform-style: preserve-3d;
   transition: all 1s;
   width: 600px;
-  z-index: 3;
+  z-index: 5;
 
   &.intro{
     right: 0px;
@@ -333,7 +335,7 @@ html, body, #app, .content{
         $blue 60px
       );
       border-radius: 30px;
-      box-shadow: 0px 0px 0px 8px $blue, 8px -8px 0px 8px $light-blue, 36px -26px 4px 8px rgba(0,0,0,0.15);
+      box-shadow: 0px 0px 0px 8px $blue, 8px -8px 0px 8px $light-blue, 26px -16px 4px 8px rgba(0,0,0,0.15);
       display: flex;
       height: 60px;
       margin-left: -60px;
