--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -155,13 +155,13 @@ html, body, #app, .content-wrapper, .content{
 
   .lights{
     transition: all 0.5s;
-    li:nth-child(1n + 13){
+    width: 620px;
+    z-index: -1;
+    li:nth-child(1n + 12){
       &:after{
         display: none;
       }
     }
-
-    width: 680px;
   }
 }
 
@@ -182,7 +182,7 @@ html, body, #app, .content-wrapper, .content{
       top: 95px;
       width: 120%;
 
-      li:nth-child(1n + 13){
+      li:nth-child(1n + 12){
         &:after{
           display: initial;
         }
@@ -228,7 +228,7 @@ html, body, #app, .content-wrapper, .content{
 .last-years-winner{
   align-items: center;
   border-radius: 60px;
-  box-shadow: -4px -4px 0px 4px $light-silver, 1px 1px 4px rgba(0,0,0,0.4);
+  box-shadow: 0px -4px 0px 4px $light-silver, 1px 1px 4px rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -262,6 +262,7 @@ html, body, #app, .content-wrapper, .content{
 
     img{
       border: none;
+      border-radius: 50%;
       max-height: 180px;
       position: absolute;
     }
@@ -859,7 +860,7 @@ $globe-spread: 3px;
 $light-off-opacity: 0.4;
 
 .lights {
-  top: 115px;
+  top: 118px;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
