--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,4 +5,5 @@ html(lang="en")
     title Christmas Hat Challenge
   body
     #app
+    script(src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js')
     script(src='assets/data.js')
