--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -57,7 +57,6 @@ body{
 
 .header{
   height: 100%;
-  pointer-events: none;
   position: relative;
   width: 100%;
   z-index: 10;
@@ -73,9 +72,10 @@ body{
 #snow{
   @include full-screen();
   left: 0px;
+  pointer-events: none;
   position: fixed;
   top: 0px;
-  z-index: 9;
+  z-index: 2;
 }
 
 .footer-wrapper{
@@ -459,8 +459,9 @@ body{
   .contestants-wrapper{
     height: auto;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 0px;
     position: relative;
+    top: 200px;
 
     .contestants{
       height: auto;
