--- a/src/index.pug
+++ b/src/index.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang="en")
   head
     meta(charset='UTF-8')
+    link(href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet')
     title Christmas Hat Challenge
   body
     #app
     script(src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js')
-    script(src='assets/data.js')
