--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,13 +8,10 @@
 }
 
 .footer{
-  align-items: center;
   background-color: white;
   border-top-left-radius: 100% 50%;
   border-top-right-radius: 100% 50%;
   bottom: 0px;
-  color: black;
-  display: flex;
   padding: 10px 0px;
   position: relative;
   text-align: center;
@@ -25,20 +22,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10px 20px;
+    margin: 5px 20px;
+    margin-top: 10px;
     width: 100%;
 
     hr{
       background-color: $blue;
       border: none;
       height: 1px;
+      margin: 2px auto;
       width: 70%;
     }
 
     p{
       margin: 5px 10%;
-      font-weight: 700;
-      padding: 10px;
+      font-size: 0.8em;
+      font-weight: 300;
+      padding: 5px;
     }
   }
 }
